#22 - Stop wrapping content inside of body cell in cba-list

--- a/src/cba-list/shadow.css
+++ b/src/cba-list/shadow.css
@@ -108,7 +108,10 @@ li .row
   border-left-width: 0;
   border-right-width: 0;
   font-weight: 300;
-  padding-left: 10px;
+  padding-left: 5px;
+  overflow: hidden;
+  white-space: pre;
+  text-overflow: ellipsis;
 }
 
 li .row:not(.highlight):hover
